--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 <form class="login">
                     <div class="login__field">
                         <i class="login__icon fas fa-user"></i>
-                        <input type="text" class="login__input" placeholder="User name / Email">
+                        <input type="text" class="login__input Email" placeholder="User name / Email">
                     </div>
                     <div class="login__field">
                         <i class="login__icon fas fa-lock"></i>
-                        <input type="password" class="login__input" placeholder="Password">
+                        <input type="password" class="login__input password" placeholder="Password">
                     </div>
-                    <button class="button login__submit">
+                    <button type="submit" class="button btn login__submit">
                         <span class="button__text">Log In Now</span>
                         <i class="button__icon fas fa-chevron-right"></i>
                     </button>				
@@ -46,4 +46,5 @@
     </div>
 </body>
 <script src="https://kit.fontawesome.com/bf520e6492.js" crossorigin="anonymous"></script>
+<script src="./index.js"></script>
 </html>
