--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
                     <div class="login__field">
                         <i class="login__icon fas fa-user"></i>
                         <input type="text" class="login__input Email" placeholder="User name / Email">
+                        <p class="mx-2 emailMessage"> </p>
                     </div>
                     <div class="login__field">
-                        <i class="login__icon fas fa-lock"></i>
-                        <input type="password" class="login__input password" placeholder="Password">
+                        <i class="login__icon fas fa-lock"></i>    
+                    <input type="password" class="login__input password" placeholder="Password">
+                    <p class="mx-2 passwordMessage"></p>
                     </div>
                     <button type="submit" class="button btn login__submit">
                         <span class="button__text">Log In Now</span>
                         <i class="button__icon fas fa-chevron-right"></i>
                     </button>				
                 </form>
+                
                 <div class="social-login">
                     <h3>log in via</h3>
                     <div class="social-icons">
@@ -43,8 +46,10 @@
                 <span class="screen__background__shape screen__background__shape1"></span>
             </div>		
         </div>
+
+        
     </div>
-</body>
+</body> 
 <script src="https://kit.fontawesome.com/bf520e6492.js" crossorigin="anonymous"></script>
 <script src="./index.js"></script>
 </html>
